[package]
name = "axum-user-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
axum = "0.6.20"
axum-extra = { version = "0.8.0", features = ["cookie"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
time = "0.3.29"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
